Fixes typo in controller and articles, Deletes not needed block in landing/index.html.erb

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,9 +1,2 @@
-<%= link_to 'Articles' controller: 'articles' %>
-<ul>
-  <% @articles.each do |article| %>
-    <li>
-      <%= article.title %><br />
-      <%= article.content %>
-    </li>
-  <% end %>
-</ul>
+<%= link_to 'Articles', controller: 'articles' %>
+<h1> Hello bitch</h1>
