--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,8 @@
-<h1>New Article</h1>
 
-<%= form_with scope: :article, url: articles_path, local: true do |form| %>
-
+<h1>Edit article</h1>
+ 
+<%= form_with(model: @article, local: true) do |form| %>
+ 
   <% if @article.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -15,20 +16,21 @@
       </ul>
     </div>
   <% end %>
-  
-<p>
+ 
+  <p>
     <%= form.label :title %><br>
-    <%= form.text_field :title%>
-</p>
-
-<p>
+    <%= form.text_field :title %>
+  </p>
+ 
+  <p>
     <%= form.label :text %><br>
-    <%= form.text_field :text %>
-</p>
-
-<p>
+    <%= form.text_area :text %>
+  </p>
+ 
+  <p>
     <%= form.submit %>
-</p>
+  </p>
+ 
 <% end %>
-
+ 
 <%= link_to 'Back', articles_path %>
